2005-04-26  lav

	* window.h: use ACS instead of WACS when not in mb_mode (for some
	  reason WACS are output without acs mode - ncurses bug?).

2005-04-19  lav

	* file.cc, menu.cc, menu1.cc, screen.cc, window.cc, window.h:
	  (PutACS) new macro; use it; use WACS_* when in mb_mode.
	* format.cc: fixed handling of inter-paragraph blank lines.

2005-04-08  lav

	* block.cc: fix tolower/toupper/exchange for multibyte chars.
	* screen.cc: skip screen update up to 80 chars, or when line changes.
	* loadsave.cc: add includes for freebsd.
	* mb.cc, mb.h: add ReplaceWCharMove function.

2005-03-23  lav

	* block.cc: use Space function.

2005-03-13  lav

	* user.cc: fix CopyFromDown/Up for wide chars.
	* about.cc: update copyright.
	* format.cc: fix formatting for wide chars.
	* inline.cc: (Space, SpaceLeft) new functions.
	* mb.cc, mb.h: (WCharLeft, WCharLeftAt) new functions; cache wc to
	  reduce mbtowc calls.

2005-01-28  lav

	* chset.cc: (set_chset_no8bit) new function.
	* undo.cc, undo.h: don't glue changes together after a pause.

2005-01-04  lav

	* chset.cc, screen.cc: better check for wc printability; don't use
	  mvaddchnstr in cursesw - it's broken.

2004-12-30  lav

	* getch.cc: workaround KEY_F definition from linux/keyboard.h
	* window.cc: add code for displaying invalid wchars.

2004-12-22  lav

	* block.cc, chset.cc, edit.cc, edit.h, mb.h, window.h, kern.cc: fix compilation
	  without wide chars; check for wide chars and if present go to mb_mode.

2004-12-08  lav

	* edit.cc: initialize newname properly.

2004-10-14  lav

	* user.cc: add .cpp and .cxx extensions for line commenting.

2004-09-20  lav

	* getstr.cc: choose wide char in mb_mode.

2004-08-19  lav

	* search.cc: prevent original pattern being corrupted by strtok.

2004-08-11  lav

	* getstr.cc: fixed display of long input lines.

2004-06-08  lav

	* keymap.cc: don't show shortcut if corresponding key in terminfo
	  is not defined; tune control-shift-Fx scores.